--- a/css/style.less
+++ b/css/style.less
@@ -8,28 +8,40 @@
             margin: 0;
             padding-right: 20px;
         }
+        .warning {
+            color: red;
+            display: none;
+            float: right;
+            font-size: 14px;
+            margin: 0;
+        }
     }
     .operator-area {
         margin-bottom: 20px;
         .operator-button {
+            background-color: transparent;
+            border: 2px solid #b4b4b4;
+            color: black;
             font-size: 14px;
             padding: 5px 10px;
-            background-color: transparent;
-            color: black;
-            border: 2px solid #b4b4b4;
             &:hover {
                 border-color: #222222;
+            }
+            &.active {
+                background-color: #222222;
+                border-color: #222222;
+                color: #fff;
             }
         }
     }
     .button-area {
         float: right;
         .action-button {
+            background-color: transparent;
+            border: 2px solid #b4b4b4;
+            color: black;
             font-size: 14px;
             padding: 5px 10px;
-            background-color: transparent;
-            color: black;
-            border: 2px solid #b4b4b4;
             &:hover {
                 border-color: #222222;
             }
