--- a/css/style.less
+++ b/css/style.less
@@ -8,6 +8,9 @@
             margin: 0;
             padding-right: 20px;
         }
+        .input-number {
+            font-size: 14px;
+        }
         .warning {
             color: red;
             display: none;
@@ -34,6 +37,8 @@
             }
         }
     }
+
+
     .button-area {
         float: right;
         .action-button {
