fixed input float / can't save file if input empty

--- a/css/style.less
+++ b/css/style.less
@@ -36,8 +36,21 @@
                 color: #fff;
             }
         }
+        .warning {
+            color: red;
+            display: none;
+            float: right;
+            font-size: 14px;
+            margin: 0;
+            padding-top: 5px;
+        }
     }
-
+    .result-area {
+        .input-number {
+            font-weight: bold;
+            width: 70%;
+        }
+    }
 
     .button-area {
         float: right;
