--- a/css/style.less
+++ b/css/style.less
@@ -54,6 +54,9 @@
 
     .button-area {
         float: right;
+        .checkbox {
+            margin-top: 0px;
+        }
         .action-button {
             background-color: transparent;
             border: 2px solid #b4b4b4;
@@ -62,6 +65,19 @@
             padding: 5px 10px;
             &:hover {
                 border-color: #222222;
+            }
+        }
+        .loading-area {
+            display: none;
+            .loading {
+                width: 30px;
+                height: 30px;
+            }
+            span {
+                font-size: 12px;
+                margin-top: 10px;
+                display: inline-block;
+                position: absolute;
             }
         }
     }
